--- a/extension/inject.css
+++ b/extension/inject.css
@@ -2187,3 +2187,134 @@ ytmusic-responsive-list-item-renderer[c-skipped]:not([unplayable]) {
 	opacity: 0.5;
 	pointer-events: none;
 }
+
+.c-lir-title-note {
+	height: 1lh;
+	aspect-ratio: 1/1;
+	margin-left: 5px;
+	
+	stroke: #dddddd;
+	stroke-width: 2px;
+	fill: #000;
+}
+
+.c-lir-title-tag {
+	height: 1lh;
+	aspect-ratio: 1/1;
+	margin-left: 5px;
+	
+	stroke-width: 0;
+	fill: #f8ff6b;
+}
+
+ytmusic-responsive-list-item-renderer:has(#stacked-layout-badges svg) .c-lir-subtitle {
+	padding-left: 5px;
+}
+
+.c-lir-subtitle {
+	font-size: 14px;
+	padding-left: 0px;
+
+	color: #d1d1d1;
+	font-weight: 450;
+}
+
+.c-lir-subtitle::before {
+	content: "“";
+}
+
+.c-lir-subtitle::after {
+	content: "”";
+}
+
+.c-colour-input {
+	padding-top: 10px;
+}
+
+.c-colour-input label {
+	font-size: 17px;
+	color: #999;
+	padding-right: 2px;
+	vertical-align: middle;
+}
+
+.c-colour-input input {
+	padding: 0;
+	border: 1px white solid;
+	border-radius: 12.5%;
+	height: 1.5lh;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+
+
+.c-popup-scroll-rows {
+	width: 100%;
+	
+}
+.c-popup-scroll-rows label {
+	display: block;
+	width: 100%;
+	height: 17px;
+	font-size: 17px;
+	color: #eee;
+	font-weight: 500;
+	margin-bottom: 6px;
+}
+
+.c-popup-scroll-rows .cont {
+	border: 1px #aaa solid;
+	border-left: none;
+	border-right: none;
+	
+	width: 100%;
+	
+	display: flex;
+	flex-direction: column;
+	
+	margin-bottom: 6px;
+	
+	max-height: 60vh;
+	
+	scrollbar-width: thin;
+}
+
+.c-popup-scroll-row {
+	width: 100%;
+	height: 40px;
+	
+	display: flex;
+	flex-direction: row;
+	
+	margin-top: 5px;
+	padding-bottom: 5px;
+	
+	border-bottom: 0.75px #555 solid;
+	cursor: pointer;
+}
+
+.c-popup-scroll-row:last-child {
+	border-bottom: none;
+}
+
+
+.c-popup-scroll-row .left-item {
+	height: 100%;
+	aspect-ratio: 1/1;
+}
+
+.c-popup-scroll-row .left-item svg {
+	height: 70%;
+	padding: 15%;
+}
+
+.c-popup-scroll-row .title-row {
+	height: 100%;
+	flex-grow: 1;
+	font-size: 16px;
+	color: #ddd;
+	font-weight: 500;
+	padding-top: 5px;
+	padding-left: 5px;
+}
