--- a/extension/inject.css
+++ b/extension/inject.css
@@ -2286,6 +2286,8 @@ ytmusic-responsive-list-item-renderer:has(#stacked-layout-badges svg) .c-lir-sub
 	
 	display: flex;
 	flex-direction: row;
+
+	position: relative;
 	
 	margin-top: 5px;
 	padding-bottom: 5px;
@@ -2309,12 +2311,26 @@ ytmusic-responsive-list-item-renderer:has(#stacked-layout-badges svg) .c-lir-sub
 	padding: 15%;
 }
 
+.c-popup-scroll-row .left-item img {
+	height: 100%;
+	border-radius: 7px;
+}
+
 .c-popup-scroll-row .title-row {
 	height: 100%;
 	flex-grow: 1;
 	font-size: 16px;
 	color: #ddd;
-	font-weight: 500;
+	font-weight: 600;
 	padding-top: 5px;
 	padding-left: 5px;
+}
+
+.c-popup-scroll-row .subtitle-row {
+	color: white;
+	font-size: 11px;
+	font-weight: 500;
+	position: absolute;
+	bottom: 7%;
+	left: 45px;
 }
