--- a/extension/inject.css
+++ b/extension/inject.css
@@ -87,11 +87,11 @@
 
 
 
-/* id items that has class ytmusic-sect... that has a child of tab ytmusic-entry... without is-primary attr */
+/* APPLY STYLE TO GUIDE SECTION THAT ISN'T PRIMARY */
 #items.ytmusic-guide-section-renderer:has(ytmusic-guide-entry-renderer:not([is-primary])),
 #items.ytmusic-guide-section-renderer:not(:has(ytmusic-guide-entry-renderer)) {
 	overflow: clip scroll !important;
-	opacity: 0;
+	opacity: unset;
 	scrollbar-width: thin;
 	scrollbar-color: #aaa rgba(0, 0, 0, 0);
 
@@ -113,6 +113,10 @@
 			opacity: 0.2;
 		}
 	}
+}
+
+#guide #items.ytmusic-guide-section-renderer:has(ytmusic-guide-entry-renderer:not([is-primary])) {
+	opacity: 0 !important;
 }
 
 ytmusic-play-button-renderer.c-paper {
@@ -1029,7 +1033,7 @@ ytmusic-guide-section-renderer:has(.c-editing) .c-sidebar-sep {
 }*/
 
 
-.c-popup-elem-overflow {
+.c-grid-popup {
 	--height: 600px;
 	width: 800px;
 	height: var(--height);
@@ -1044,7 +1048,7 @@ ytmusic-guide-section-renderer:has(.c-editing) .c-sidebar-sep {
 	border: 2px solid rgb(20, 20, 20);
 }
 
-.c-popup-elem-overflow:has([c-dragging="true"]) {
+.c-grid-popup:has([c-dragging="true"]) {
 	cursor: grabbing !important;
 
 	* {
@@ -1052,13 +1056,13 @@ ytmusic-guide-section-renderer:has(.c-editing) .c-sidebar-sep {
 	}
 }
 
-.c-popup-elem-overflow .header {
+.c-grid-popup .header {
 	width: 100%;
 	height: 15%;
 	border-bottom: 1px solid white;
 }
 
-.c-popup-elem-overflow .header a {
+.c-grid-popup .header a {
 	height: 50%;
 	display: block;
 
@@ -1069,17 +1073,17 @@ ytmusic-guide-section-renderer:has(.c-editing) .c-sidebar-sep {
 	white-space: pre-wrap;
 }
 
-.c-popup-elem-overflow .header a:first-child {
+.c-grid-popup .header a:first-child {
 	font-weight: 450;
 	font-size: 40px;
 }
 
-.c-popup-elem-overflow .header a:nth-child(2) {
+.c-grid-popup .header a:nth-child(2) {
 	font-weight: 200;
 	font-size: 18px;
 }
 
-.c-popup-elem-overflow .elem-cont {
+.c-grid-popup .elem-cont {
 	height: 85%;
 
 	display: flex;
@@ -2069,11 +2073,11 @@ ytmusic-multi-page-menu-renderer.ytmusicMultiPageMenuRendererHostAccountMenu {
 
 
 
-/*.c-popup-elem-overflow[func="link-albums"] .c-paper-text-cont .c-paper-subtitle {
+/*.c-grid-popup[func="link-albums"] .c-paper-text-cont .c-paper-subtitle {
 	display: none;
 }
 
-.c-popup-elem-overflow[func="link-albums"] .c-paper-text-cont .c-paper-title {
+.c-grid-popup[func="link-albums"] .c-paper-text-cont .c-paper-title {
 	-webkit-line-clamp: none;
 	line-clamp: none;
 
